# bumblebee-status

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Modules.md  PKGBUILD  PKGBUILD.template  README.md  README.rst  bumblebee-ctl  bumblebee-status  coverage.sh  create-pkgbuild.py  generate-base-tests.py  i3bumblebee  runlint.sh  runtests.py  runtests.sh  setup.cfg  setup.py  testjson.sh  themes  versioneer.py
.github/: ISSUE_TEMPLATE.md
bumblebee/: __about__.py  _version.py  config.py  engine.py  error.py  input.py  module.py  output.py  popup.py  popup_v2.py  store.py  theme.py  themes.py  util.py
bumblebee_status/: _version.py  discover.py
core/: config.py  decorators.py  event.py  input.py  module.py  output.py  theme.py  widget.py
doc/: DEVELOPMENT.md  FAQ.md  FEATURES.md  HOWTO_MODULE.md  HOWTO_THEME.md  LIST-OF-MODULES.md  MODULES.md  MODULE_MIGRATION.md  NOTES.md  THEMES.md
docs/: FAQ.rst  api.rst  conf.py  docstring.tmpl  features.rst  index.rst  introduction.rst  modules.rst  requirements.txt  themes.rst
man/: bumblebee-ctl.1  bumblebee-status.1
modules/: __pulseaudio.py  date.py  datetime.py  kernel.py  nic.py  pasink.py  pasource.py  test.py
pytests/: __init__.py
tests/: __init__.py  mocks.py  test_config.py  test_engine.py  test_i3barinput.py  test_i3baroutput.py  test_module.py  test_modules.py  test_output.py  test_store.py  test_theme.py  test_util.py  util.py
themes/: .gruvbox-powerline-edit.json.un~  .powerline-edit.json.un~  albiceleste-powerline.json  test.json  (+35 more)
(+534 files in other folders)
