[metadata]
name = bumblebee-status
author = tobi-wan-kenobi
author_email = github@tobi-wan-kenobi.at
url = https://github.com/tobi-wan-kenobi/bumblebee-status
project_urls =
    Documentation = https://bumblebee-status.readthedocs.io/
    Code = https://github.com/tobi-wan-kenobi/bumblebee-status
    Issue tracker = https://github.com/tobi-wan-kenobi/bumblebee-status

description = a modular, theme-able status line generator for the i3 window manager.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Internationalization
    Topic :: Utilities
keywords = bumblebee-status

[options]
include_package_data = True
allow_all_external = yes
trusted_host =
    gitlab.*
    bitbucket.org
    github.com
packages = find:
scripts =
    ./bumblebee-status
	./bumblebee-ctl

[versioneer]
VCS = git
style = pep440
versionfile_source = bumblebee_status/_version.py
versionfile_build = bumblebee_status/_version.py
tag_prefix =
parentdir_prefix = 
